# gcp-django-logger

./: README.md  pyproject.toml  setup.py
gcp_django_logger/: __init__.py  logger.py
tests/: test_logger.py
